<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">BusTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="access_token">pk.eyJ1IjoiZ2VyZ2VseXN6IiwiYSI6ImNqcHY2OG9iYTBtZWE0M3MyMWltb29xa3AifQ.SdvjAK1YxFd8169Go7Ip6w</string>
    <string name="user_data_upload_fail_details">User data upload failed! Details:</string>
    <string name="apply">Apply</string>
    <string name="current_status">Current status: %s</string>
    <string name="closest_station">Closest station: %s</string>
    <string name="user_id">User ID: %s</string>
    <string name="current_speed">Current speed: %s</string>
    <string name="select_station">Select station</string>
    <string name="offline_bus_program">Offline bus program</string>
    <string name="change_status_and_or_bus">Change status and/or bus</string>
    <string name="please_choose_your_current_status">Please choose your current status:</string>
    <string name="please_choose_your_current_bus">Please choose your current bus:</string>
    <string name="update_data">Update data</string>
    <string name="successfully_updated">Successfully updated!</string>
    <string name="from_where_to_where">%1$s - %2$s</string>
    <string name="select_the_station_where_you_want_to_go">Select the station where you want to go:</string>
    <string-array name="bus_numbers">
        <item>1</item>
        <item>2</item>
        <item>2b</item>
        <item>2e</item>
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>10</item>
        <item>10b</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>23</item>
        <item>26</item>
        <item>27</item>
        <item>30</item>
        <item>30b</item>
        <item>32</item>
        <item>43</item>
        <item>44</item>
    </string-array>
    <string name="list_of_all_buses_heading_to">List of all buses heading to: %s</string>
    <string name="show_route_for_bus">Show route for bus</string>
    <string name="select_the_bus_to_show_it_s_route">Select the bus to show it\'s route</string>
    <string name="firstStation">FirstStation</string>
    <string name="lastStation">LastStation</string>
    <string name="settings">Settings</string>
    <string name="set_your_status_to_waiting_for_bus_other_users_won_t_see_you">Set your status to: waiting for bus. Other users won\'t see you.</string>
    <string name="enter_the_station_name_here">Enter the station name here</string>
    <string name="or_select_your_station_from_this_list">or select your station from this list</string>
    <string name="info_for_bus">Info for bus: %s</string>
    <plurals name="arrives_in">
        <item quantity="one">Arrives in %d minute.</item>
        <item quantity="other">Arrives in %d minutes.</item>
    </plurals>
    <string name="closest_station_to_you">Closest station to you:</string>
    <string name="real_time_bus_found">Real-time bus found!</string>
    <plurals name="leaves_station_in_minutes">
        <item quantity="one">Leaves %2$s\nstation in %1$d minute.</item>
        <item quantity="other">Leaves %2$s\nstation in %1$d minutes.</item>
    </plurals>
    <string name="leaves_station_right_now">"Leaves %s\nstation right now."</string>
    <plurals name="left_station_minutes_ago">
        <item quantity="one">Left %2$s\nstation %1$d minute ago.</item>
        <item quantity="other">Left %2$s\nstation %1$d minutes ago.</item>
    </plurals>
    <string name="app_is_running_in_the_background">App is running in the background</string>
    <string name="select_bus_to_show_its_program">Select the bus to show it\'s program</string>
    <string name="probably_left">Probably left.</string>
    <string name="show_only_buses_close_to_you">Show only buses close to you (in meters)</string>
    <string-array name="update_frequency_options">
        <item>Fastest</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
    </string-array>
    <string-array name="update_frequency_options_values">
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>
    <string-array name="update_priority_options">
        <item>Battery efficient</item>
        <item>Balanced</item>
        <item>High performance</item>
    </string-array>
    <string-array name="update_priority_options_values">
        <item>104</item>
        <item>102</item>
        <item>100</item>
    </string-array>
</resources>