<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_select_station"
            android:icon="@drawable/ic_bus"
            android:title="@string/select_station" />
        <item
            android:id="@+id/nav_offline_bus_data"
            android:icon="@drawable/ic_offline_data"
            android:title="@string/offline_bus_program" />
        <item
            android:id="@+id/nav_change_statusAndBus"
            android:icon="@drawable/ic_status_and_bus"
            android:title="@string/change_status_and_or_bus" />
        <item
            android:id="@+id/nav_setup_route"
            android:icon="@drawable/ic_setup_route"
            android:title="@string/show_route_for_bus" />

        <item
            android:id="@+id/nav_update_busStations"
            android:icon="@drawable/ic_update"
            android:title="@string/update_data" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>
