<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/popup_style_set"
        android:padding="12dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView_drawRoute_select_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/modern_sans"
            android:text="@string/select_the_bus_to_show_it_s_route"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_drawRoute_selectBus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_drawRoute_select_bus"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:popupBackground="@color/white"
            tools:targetApi="lollipop" />

        <RadioGroup
            android:id="@+id/radioGroupRouting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_drawRoute_selectBus"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radioButtonRouting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/modern_sans"
                android:text="@string/firstStation"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButtonRouting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/modern_sans"
                android:text="@string/lastStation"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RadioGroup>

        <Button
            android:id="@+id/button_drawRoute_apply"
            android:layout_width="52dp"
            android:layout_height="32dp"
            android:layout_below="@id/radioGroupRouting"
            android:layout_centerHorizontal="true"
            android:background="@color/lighterDarkGray"
            android:fontFamily="@font/modern_sans"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </RelativeLayout>

</RelativeLayout>